src/objects/Short_Amend__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Number_Collected__c</fullName>
        <description>this is the number of amended collections that have been made - writen back by Payonomy</description>
        <label>Actual Number Collected</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Total Amount to be collected over the period</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Instruction__c</fullName>
        <label>Instruction</label>
        <referenceTo>Payonomy_Instruction__c</referenceTo>
        <relationshipLabel>Short Term Amendments</relationshipLabel>
        <relationshipName>Short_Amends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Linked_STA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This relationship represents a link to a subsequent amendment - the next in the processing chain if you would like to amend the amendment</description>
        <inlineHelpText>This relationship represents a link to a subsequent amendment - the next in the processing chain if you would like to amend the amendment</inlineHelpText>
        <label>Linked STA</label>
        <referenceTo>Short_Amend__c</referenceTo>
        <relationshipLabel>Parent STA</relationshipLabel>
        <relationshipName>Short_Term_Amendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Display__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IMAGE( 
CASE( Status_Display__c , 
&quot;Active&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Suspended&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;On hold&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;Cancelled&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;Complete&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/img/samples/light_red.gif&quot;), 
&quot;Status&quot;)</formula>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_To_Be_Collected__c</fullName>
        <inlineHelpText>this is the total number of amended collections that will be made</inlineHelpText>
        <label>Total Number To Be Collected</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Short Term Amendment</label>
    <nameField>
        <displayFormat>STA - {0}</displayFormat>
        <label>Short Term Amendment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Short Term Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_number_of_STAs_to_be_collected</fullName>
        <active>true</active>
        <description>this checks against the DDI to make sure there are enough collections left to complete the STA collections</description>
        <errorConditionFormula>Total_Number_To_Be_Collected__c   &gt;   Instruction__r.Collections_To_Be_Made__c</errorConditionFormula>
        <errorDisplayField>Total_Number_To_Be_Collected__c</errorDisplayField>
        <errorMessage>This exceeds the total number of collections left to be made against the Direct Debit Instruction</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Collected_To_Be_Blank_On_Creation</fullName>
        <active>true</active>
        <description>this field is only to be written to by the Payonomy DD Processing service</description>
        <errorConditionFormula>AND (NOT ISNULL (Actual_Number_Collected__c), ISNEW( ))</errorConditionFormula>
        <errorDisplayField>Actual_Number_Collected__c</errorDisplayField>
        <errorMessage>This field must be blank when the Direct Credit is created</errorMessage>
    </validationRules>
</CustomObject>